--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "intervention/image": "^3.11",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "maatwebsite/excel": "^1.1",
+        "maatwebsite/excel": "3.1.66",
         "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
