Update environment configuration, add GitHub URL to job applications, and enhance job and feedback controllers with improved data fetching. Include new type definitions for react-world-flags and update team member roles on AboutPage.

--- a/package.json
+++ b/package.json
@@ -15,30 +15,33 @@
     "@studio-freight/lenis": "^1.0.33",
     "@tanstack/react-query": "^5.17.0",
     "@types/three": "^0.160.0",
+    "apexcharts": "^5.3.6",
     "clsx": "^2.1.0",
     "d3-geo": "^3.1.1",
+    "date-fns": "^3.6.0",
     "framer-motion": "^10.18.0",
     "gsap": "^3.12.4",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.539.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.9.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.5.0",
     "react-simple-maps": "^3.0.0",
+    "react-world-flags": "^1.6.0",
+    "recharts": "^2.12.7",
     "simple-icons": "^15.10.0",
     "tailwind-merge": "^2.2.0",
     "three": "^0.160.0",
-    "wouter": "^3.0.0",
-    "recharts": "^2.12.7",
-    "react-dropzone": "^14.2.3",
-    "react-hot-toast": "^2.4.1",
-    "date-fns": "^3.6.0",
-    "react-world-flags": "^1.6.0"
+    "wouter": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "^24.2.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-simple-maps": "^3.0.6",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
