--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-jvectormap/core": "^1.0.4",
+    "@react-jvectormap/world": "^1.1.2",
     "@react-three/drei": "^9.92.0",
     "@react-three/fiber": "^8.15.0",
     "@studio-freight/lenis": "^1.0.33",
